# CrewAI

./: 01_basic_agent.ipynb
basic_crew/: pyproject.toml  report.md
basic_crew/src/basic_crew/: crew.py  main.py
basic_crew_ai/: README.md  pyproject.toml
basic_crew_ai/src/basic_crew_ai/: crew.py  main.py
marketing_crew/: README.md  content.md  improvements.md  pyproject.toml
marketing_crew/src/marketing_crew/: crew.py  main.py
marketing_crew/src/marketing_crew/config/: agents.yaml  tasks.yaml
normal_agent/: 01_basic_agent.ipynb  requirements.txt
