[project]
name = "basic_crew"
version = "0.1.0"
description = "basic_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "crewai[tools]==1.7.2",
    "fastapi>=0.127.1",
    "fastapi-sso>=0.17.0",
    "litellm>=1.75.3",
    "pydantic[email]>=2.11.10",
]

[project.scripts]
basic_crew = "basic_crew.main:run"
run_crew = "basic_crew.main:run"
train = "basic_crew.main:train"
replay = "basic_crew.main:replay"
test = "basic_crew.main:test"
run_with_trigger = "basic_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
