[project]
name = "basic_crew_ai"
version = "0.1.0"
description = "basic_crew_ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2"
]

[project.scripts]
basic_crew_ai = "basic_crew_ai.main:run"
run_crew = "basic_crew_ai.main:run"
train = "basic_crew_ai.main:train"
replay = "basic_crew_ai.main:replay"
test = "basic_crew_ai.main:test"
run_with_trigger = "basic_crew_ai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
